# oq-engine

./: .classpath  .deepsource.toml  .deploy_docs.enc  .deploy_rsa.enc  .gitattributes  .gitignore  .gitmodules  .noseids  .project  .travis.yml  03testPgCRUD.py  CONTRIBUTORS.txt  ChangeLog-0.4.3.txt  ChangeLog.txt  MANIFEST.in  MANIFEST.in_old  PULL_REQUEST_TEMPLATE.md  README  README.fab  README.josh  README.md  README.rst  README.txt  README2  RxDistanceCalculator.ipynb  SystemArchitecture.txt  Xgboost_ln(PSA=0.05).onnx  Xgboost_ln(PSA=0.08).onnx  Xgboost_ln(PSA=0.09).onnx  Xgboost_ln(PSA=0.13).onnx  Xgboost_ln(PSA=0.14).onnx  Xgboost_ln(PSA=0.4).onnx  Xgboost_ln(PSA=0.6).onnx  Xgboost_ln(PSA=0.7).onnx  Xgboost_ln(PSA=0.9).onnx  __init__.py  _config.yml  abrahamson_2015_test.py  build.xml  celeryconfig.py  (+114 more)
.github/: FUNDING.yml
.travis/: common.sh  executables.sh  packaging.sh  py_executables.sh  py_shebangs.sh  shebangs.sh
MEMORY_TESTING/: oq_scaling_tests.md  oq_scaling_tests_summary.md
ansible/: install_oq.yml
data/: CalculatorConfig.inp  CalculatorConfig.properties  ErfLogicTree.inp  GmpeLogicTree.inp
data-abst-control/: dbconnect.py  eventdata.py  parseeqcat.py  testPgCRUD.py
db_tests/: __init__.py  bulk_insert_unittest.py  db_bulk_insert.py  db_loader_unittest.py  hazard_opensha_unittest.py  helpers.py  input_risk_unittest.py  job_unittest.py  output_hazard_unittest.py  output_risk_unittest.py  output_writers_unittest.py  prepare_job_unittest.py
debian/: README.source  changelog  changelog.bak  changelog_hazardlib  changelog_old  changelog_risklib  config  control  control.in  control_old  copyright  copyright_old  docs  install  postinst  postrm  postrm_old  preinst  python-oq-engine-common.postinst  python-oq-engine-common.preinst  python-oq-engine-master.config  python-oq-engine-master.install  python-oq-engine-master.postinst  python-oq-engine-master.postrm  python-oq-engine-master.templates  python-oq-engine-standalone.celeryd.default  python-oq-engine-standalone.celeryd.init  python-oq-engine-standalone.celeryd2.init  python-oq-engine-standalone.config  python-oq-engine-standalone.install  python-oq-engine-standalone.postinst  python-oq-engine-standalone.postrm  python-oq-engine-standalone.preinst  python-oq-engine-standalone.templates  python-oq-engine-worker.config  python-oq-engine-worker.postinst  python-oq-engine-worker.postrm  python-oq-engine-worker.templates  python-oq-risklib.install  python3-oq-engine-master.docs  (+8 more)
demos/: expected-outputs.txt
doc/: Csv-outputs.md  Makefile  OAS.md  OaaS.md  about.md  architecture.md  breaking-hazardlib.md  calc.rst  calculation-workflow.md  conf.py  const.rst  continental-scale-risk-calculations.md  convergency-of-the-gmfs.rst  csv-outputs-2.md  csv-outputs.md  datastore.md  developers-notes.md  development-guidelines.md  development.md  dropping-python-2.md  ebr2021.md  effective-realizations.rst  engine-outputs.rst  engine-releases.md  event-based-with-large-logic-tree.rst  expected.xml  faq-cluster.md  faq-hazard.md  faq-risk.md  faq.md  fragility_model.xml  glossary.md  gmf.csv  hardware-suggestions.md  hazard_curves.csv  hello.ini  hello_test.py  implementing-new-gsim.md  imt.rst  index.rst  (+50 more)
doc23/: conf.py  index.rst
docker/: Dockerfile.base  Dockerfile.dask  Dockerfile.dev  Dockerfile.devel  Dockerfile.engine  Dockerfile.master  Dockerfile.oqtools  Dockerfile.tools  Dockerfile.volcano  Dockerfile.worker  README.md  Singularity.def  docker-compose.celery.yml  docker-compose.yml  openquake.cfg
docs/: Makefile  NSHMP2008US_micro.xml  conf.py  effective-realizations.rst  expected.xml  expected_agg_loss.csv  hazard_curves.csv  index.rst  job.ini  job_damage.ini  job_gmvs_from_csv.ini  job_hc_from_csv.ini  job_risk.ini  lite-course.ipynb  make.bat  openquake.baselib.rst  openquake.commonlib.calculators.rst  openquake.commonlib.commands.rst  openquake.commonlib.rst  openquake.risklib.rst  riskinput.py  sites.csv  source_model_logic_tree.xml
engine/: __init__.py  settings.py  signalling.py  writer.py
examples/: agg-loss-curve.xml  bcr-map-quantile.xml  bcr-map.xml  collapse-map.xml  complex-fault-rupture.xml  disaggregation.xml  disaggregation_binary.xml  dmg-dist-per-asset.xml  dmg-dist-per-taxonomy.xml  dmg-dist-total.xml  exposure-portfolio.xml  fragm_c.xml  fragm_d.xml  gmf-arbitrarily-complex.xml  gmf-complete-lt-event-based.xml  gmf-complex-fault.xml  gmf-event-based.xml  gmf-multiple-ruptures.xml  gmf-point-rupture.xml  gmf-scenario.xml  gmf-simple-fault.xml  hazard-curves-sa.xml  hazard-curves.xml  hazard-map-mean.xml  hazard-map-quantile.xml  hazard-map.xml  logic-tree-gmpe.xml  logic-tree-source-model.xml  loss-curves-quantile.xml  loss-curves-real.xml  loss-curves.xml  loss-fractions-taxonomies.xml  loss-map-quantile.xml  loss-map-scenario-risk.xml  loss-map-single-event.xml  loss-map.xml  loss-ratio-curves-real.xml  loss-ratio-curves.xml  multi-planes-rupture.xml  point-rupture.xml  (+8 more)
hazard/: uhs.xsd
hazardlib/: __init__.py  const.py  correlation.py  imt.py  pmf.py  site.py  speedups.py  tom.py
helpers/: abs_readme.sh  changelog2ghrel.sh  contributors.py  inter-repo-branch-consistency.sh  interrepo-branch-consistency.sh  makerpm.sh  post-divergence.sh  pre-divergence.sh  requirements_reorder.sh  testrpm.sh  zipdemos.sh
hmtk/: __init__.py  hazard.py  models.py  registry.py
htests/: imt_test.py  near_fault_test.py  sourcewriter_test.py  stats_test.py  valid_test.py
java/: README
java_tests/: AllTests.java  Examples.java  README  RiskEngineCoreTests.java  RiskEngineTests.java
k8s/: Dockerfile  README.md  deploy-azure_engine.yaml  deploy-cluster.yaml  deploy-engine.yaml  deploy-master.yaml  deploy-worker.yaml  docker-compose.yaml  docker-compose.yml  engine-ingress.yaml  engine-master-cfg.yaml  engine-master.yaml  engine-svc.yaml  engine-webui.yaml  engine-worker.yaml  ingress-webui.yaml  job_cluster.yaml  job_cluster.yaml.orig  job_latest.yaml  job_nightly.yaml  kind-cluster.yaml  kind-cluster_hostpath.yaml  openquake.cfg  (+3 more)
(+19591 files in other folders)
